Fixed bug rig test by fixing test config in gradle